--- a/kibanda.html
+++ b/kibanda.html
@@ -1,70 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Kibanda Specials</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<script src="kibanda-pins.js"></script>
-<script src="movies-data.js"></script>
-<script src="series-data.js"></script>
-
+<title>Kibanda</title>
 <style>
-body{margin:0;background:#000;color:#fff;font-family:Poppins,sans-serif;}
-.section{padding:16px;}
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(150px,1fr));
-  gap:14px;
-}
-.card img{width:100%;border-radius:10px;}
-.btn{
-  width:100%;
-  padding:8px;
-  margin-top:6px;
-  border:none;
-  border-radius:6px;
-  font-weight:bold;
-}
-.watch{background:#e50914;color:#fff;}
-.download{background:#16a34a;color:#fff;}
+body { font-family: Arial; background:#111; color:#fff; margin:0; padding:20px; }
+h1 { text-align:center; margin-bottom:20px; }
+.grid { display:grid; grid-template-columns: repeat(auto-fit,minmax(220px,1fr)); gap:15px; }
+.card { background:#1a1a1a; padding:15px; border-radius:8px; text-align:center; }
+.card img { max-width:100%; border-radius:6px; }
+button { margin-top:10px; padding:8px 15px; border:none; border-radius:6px; background:#ff7a18; cursor:pointer; color:#fff; font-weight:bold; }
+button:hover { background:#ffb400; }
 </style>
 </head>
-
 <body>
 
+<h1>Kibanda Series & Movies</h1>
+<div class="grid" id="contentGrid"></div>
+
+<script src="kibanda-pins.js"></script>
 <script>
-const pin = localStorage.getItem("kibandaPIN");
-if(!pin || !KIBANDA_PINS[pin]){
-  location.replace("kibanda-login.html");
+// Redirect if no active user
+const activeUser = localStorage.getItem("kibandaActiveUser");
+const activatedAt = localStorage.getItem("kibandaActivatedAt_" + activeUser);
+const EXPIRY_TIME = 30*24*60*60*1000;
+
+if(!activeUser || !activatedAt || (Date.now() - activatedAt > EXPIRY_TIME)){
+  alert("Access denied or expired. Login first.");
+  localStorage.removeItem("kibandaActiveUser");
+  window.location.href = "kibanda-login.html";
 }
-</script>
 
-<div class="section">
-  <h2>🍿 Kibanda Content</h2>
-  <div class="grid" id="movies"></div>
-</div>
+// Sample content
+const contentList = [
+  { title:"Movie 1", img:"https://via.placeholder.com/200x300?text=Movie+1", url:"https://www.example.com/video1.mp4" },
+  { title:"Movie 2", img:"https://via.placeholder.com/200x300?text=Movie+2", url:"https://www.example.com/video2.mp4" },
+  { title:"Series 1", img:"https://via.placeholder.com/200x300?text=Series+1", url:"https://www.example.com/series1.mp4" },
+  { title:"Series 2", img:"https://via.placeholder.com/200x300?text=Series+2", url:"https://www.example.com/series2.mp4" }
+];
 
-<script>
-function card(item){
-  const c=document.createElement("div");
-  c.className="card";
-  c.innerHTML=`
-    <img src="${item.poster}">
-    <div>${item.title}</div>
-    <a href="${item.video}" target="_blank">
-      <button class="btn watch">Watch</button>
-    </a>
-    <a href="${item.video}" download>
-      <button class="btn download">Download</button>
-    </a>
+const grid = document.getElementById("contentGrid");
+
+contentList.forEach(item => {
+  const card = document.createElement("div");
+  card.className = "card";
+  card.innerHTML = `
+    <img src="${item.img}" alt="${item.title}">
+    <h3>${item.title}</h3>
+    <a href="${item.url}" download><button>Download</button></a>
   `;
-  return c;
-}
-
-MOVIES.forEach(m=>movies.appendChild(card(m)));
-SERIES.forEach(s=>movies.appendChild(card(s)));
+  grid.appendChild(card);
+});
 </script>
-
 </body>
 </html>
