--- a/home.html
+++ b/home.html
@@ -125,7 +125,11 @@ body{
   <a href="login.html" class="btn login">Login</a>
   <a href="live.html" class="btn live">Live TV</a>
   <a href="about.html" class="btn about">About</a>
+  <a href="agents.html" class="btn agents">Our Agents</a>
+  <a href="library-login.html" class="btn library">Library</a>
+  <a href="kibanda-login.html" class="btn kibanda">Kibanda</a>
 </div>
+
 
 <div class="section">
   <h3>Latest Movies</h3>
