--- a/library-login.html
+++ b/library-login.html
@@ -50,7 +50,7 @@ button:hover{background:#22c55e;}
 <body>
 
 <div class="card">
-  <h2>Kibanda Access</h2>
+  <h2>Login your Library</h2>
   <input id="username" placeholder="Enter Library name">
   <input id="pin" placeholder="Enter Password">
   <button onclick="login()">Enter</button>
