--- a/home.html
+++ b/home.html
@@ -243,6 +243,8 @@ for(var j=0;j<SERIES.length;j++){
   seriesBox.appendChild(createCard(SERIES[j],"series"));
 }
 </script>
-
+<!-- Adsterra Ad -->
+<script src="https://pl28597623.effectivegatecpm.com/47/af/6b/47af6bb4248b5c79dabea6b329d6d72f.js"></script>
 </body>
+
 </html>
