--- a/login.html
+++ b/login.html
@@ -74,6 +74,11 @@ button:hover { background: #ffb400; }
   <button onclick="login()">Login</button>
   <div id="msg"></div>
 </div>
+  <!-- Ad container -->
+<div style="max-width:380px;margin:14px auto 0;text-align:center;">
+  <script src="https://pl28597623.effectivegatecpm.com/47/af/6b/47af6bb4248b5c79dabea6b329d6d72f.js"></script>
+</div>
+
 
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
