--- a/watch.html
+++ b/watch.html
@@ -55,7 +55,7 @@ footer{text-align:center;font-size:.85rem;margin-top:15px;opacity:.7;}
     <a href="packages.html" class="btn renew">⏳ Extend Subscription</a>
     <a href="busansocity.html" class="btn join">💖 Join Busanso City</a>
     <a href="donate.html" class="btn donate">💖 Donate to Orphans</a>
-    <a href="livetv.html" class="btn live">📡 Live TV</a>
+    <a href="live.html" class="btn live">📡 Live TV</a>
   </div>
 
   <div class="countdown" id="countdownDisplay"></div>
