--- a/home.html
+++ b/home.html
@@ -180,6 +180,18 @@ body{
   <h3>Latest Movies</h3>
   <div class="slider" id="moviesBox"></div>
 </div>
+<div class="ad-banner" style="text-align:center; margin:20px 0;">
+  <script>
+    atOptions = {
+      'key' : '1c9ccdb756a82c4d663014a338917bd7',
+      'format' : 'iframe',
+      'height' : 250,
+      'width' : 300,
+      'params' : {}
+    };
+  </script>
+  <script src="https://www.highperformanceformat.com/1c9ccdb756a82c4d663014a338917bd7/invoke.js"></script>
+</div>
 
 <div class="section">
   <h3>Latest Series</h3>
