--- a/movie.html
+++ b/movie.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>BUSANSO – Movie Player</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta name="monetag" content="6d418a15bef62e99f15abae082c777e0">
 <script src="movies-data.js"></script>
 
 <!-- Firebase SDKs -->
