--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>BUSANSO NATION</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta name="monetag" content="6d418a15bef62e99f15abae082c777e0">
 <style>
 *{
   margin:0;
