--- a/live.html
+++ b/live.html
@@ -96,6 +96,12 @@ body{
   height:100%;
   border:none;
 }
+  .ad-box{
+  margin:20px auto;
+  text-align:center;
+  max-width:100%;
+}
+
 </style>
 </head>
 
@@ -124,6 +130,18 @@ body{
       allowfullscreen>
     </iframe>
   </div>
+</div>
+<!-- MONETAG BANNER AD -->
+<div class="ad-box">
+  <script>
+    (function(s){
+      s.dataset.zone='10536867',
+      s.src='https://nap5k.com/tag.min.js'
+    })([document.documentElement, document.body]
+      .filter(Boolean)
+      .pop()
+      .appendChild(document.createElement('script')))
+  </script>
 </div>
 
 </body>
