--- a/about.html
+++ b/about.html
@@ -76,6 +76,12 @@ body {
   opacity:0.7;
   color:#1f2933;
 }
+  .ad-box{
+  margin:20px auto;
+  text-align:center;
+  max-width:100%;
+}
+
 </style>
 </head>
 <body>
@@ -95,6 +101,19 @@ body {
     <h2>What We Offer</h2>
     <p>Enjoy a wide range of movies, series, and VJ-exclusive shows with flexible subscription packages, you can watch anytime, anywhere, on any device.</p>
   </div>
+<!-- MONETAG BANNER AD -->
+<div class="ad-box">
+  <script>
+    (function(s){
+      s.dataset.zone='10536867',
+      s.src='https://nap5k.com/tag.min.js'
+    })([document.documentElement, document.body]
+      .filter(Boolean)
+      .pop()
+      .appendChild(document.createElement('script')))
+  </script>
+</div>
+
 
   <div class="section">
     <h2>Join the Community</h2>
