--- a/kibanda.html
+++ b/kibanda.html
@@ -218,6 +218,8 @@
 { title: "Episode 4", url: "https://drive.google.com/file/d/1gpA0FTnfQDntecvt0w8e1eUPqKCfbHEe/view" },
 { title: "Episode 5", url: "https://drive.google.com/file/d/1HEMsJolh-rHHpHZQq__mZu_xSdRImmr6/view" },
 { title: "Episode 6", url: "https://drive.google.com/file/d/1prnCWLTeyiPYra9STaEqXd_7iJzI3DVe/preview" },
+ { title: "Episode 7", url: "https://drive.google.com/file/d/1943ULAKpaLG8JqP2-hQQnp0GMGBZnJJt/view" },
+{ title: "Episode 8", url: "https://drive.google.com/file/d/1YCB4mMrljIoyXKSFG3WvlW8sB_0pxQTP/view" },
 
 ]
           },
@@ -264,6 +266,9 @@
 { title: "Episode 15", url: "https://drive.google.com/file/d/1rUrbve1W8Qn4zs1g-2WhvXUxNKCcQP7z/view" },
 { title: "Episode 16", url: "https://drive.google.com/file/d/1JtNw4CzLBzLTa6AIenyuFgheFZR5mw-P/view" },
 { title: "Episode 17", url: "https://drive.google.com/file/d/1aBPZ_QnAl-bhBVOVzv0eUKifBbhw7ImT/view" },
+ { title: "Episode 18", url: "https://drive.google.com/file/d/1GIVylMC0g7k3JdV-iI7VeTlaYbXvpjRV/view" },
+ { title: "Episode 19", url: "https://drive.google.com/file/d/1YKlKxmhBUqzdfuhTI5_kCKHQXkM4-_m_/view" },
+ { title: "Episode 20", url: "https://drive.google.com/file/d/14KoaGObxNEFzL3nlITOSIaQImm5KmIct/view" },
 ]
           },
      {
