--- a/kibanda.html
+++ b/kibanda.html
@@ -237,6 +237,7 @@
 { title: "Episode 5", url: "https://drive.google.com/file/d/1eVDBuaemkfDIe34V0vjIPvetrw9AUmgg/view" },
 { title: "Episode 6", url: "https://drive.google.com/file/d/1eQo-qvWuD6OLeqdaVR7FdTBW9u_QMg6C/view" },
 { title: "Episode 7", url: "https://drive.google.com/file/d/1MVDAjXAQ1IeG-cj--rXQE9ISDUQc-jxz/view" },
+{ title: "Episode 8", url: "https://drive.google.com/file/d/1qwecoky8n6QLEeOE8SbTLg793hVLw3Td/view" },
 
 ]
           },
