--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 <title>BUSANSO NATION</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="monetag" content="6d418a15bef62e99f15abae082c777e0">
+
+<!-- PWA REQUIRED -->
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#000000">
+<link rel="apple-touch-icon" href="icons/icon-192.png">
+<!-- END PWA -->
+
 <style>
 *{
   margin:0;
@@ -83,6 +90,7 @@ body{
 }
 </style>
 </head>
+
 
 <body>
 
