--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@ setTimeout(() => {
   }
 }, 5500);
 </script>
+<script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("service-worker.js");
+}
+</script>
 
 </body>
 </html>
