--- a/donate.html
+++ b/donate.html
@@ -201,7 +201,7 @@
         <h2>Donate</h2>
         <p class="muted">Any support goes a long way in changing the lives of our children. Donations can be sent via Mobile Money.</p>
         <ul class="list">
-          <li><b>Mobile Money:</b> 0782398843 (Senyonjo Geofrey)</li>
+          <li><b>Mobile Money:</b> 0792172818 (Senyonjo Geofrey)</li>
         </ul>
         <p class="muted small">Thank you for your kindness and generosity.</p>
       </div>
@@ -213,7 +213,7 @@
       <div class="card">
         <h2>Contact Us</h2>
         <ul class="list">
-          <li><b>Phone:</b> <a href="tel:+256782398843">+256 782 398 843</a></li>
+          <li><b>Phone:</b> <a href="tel:+256703888884">+256 792172818</a></li>
           <li><b>Email:</b> <a href="mailto:gkfoundationuganda@gmail.com">gkfoundationuganda@gmail.com</a></li>
         </ul>
       </div>
