--- a/kibanda.html
+++ b/kibanda.html
@@ -157,6 +157,18 @@
     const movies = [
 
          {
+                                                                       type: "series",
+        title: "DANGEBAAJI",
+        poster: "https://i.ibb.co/7tPwBcqk/aaaaaaaaa.jpg",
+        description: "2026 India Action ",
+        episodes: [
+{ title: "Episode 1", url: "https://drive.google.com/file/d/1DoS1vzpFCUwIL_si7RmiADQFUFQLOhqp/view" },
+{ title: "Episode 2", url: "https://drive.google.com/file/d/1upyeGZ4e9l-9xabp6XldvXvkQc8PuPU3/view" },
+
+]
+          },
+     {
+         
                                                                     type: "series",
         title: "SANKAT",
         poster: "https://m.media-amazon.com/images/M/MV5BODcwODE4N2UtMTUyNS00NmE1LWE3MmItYTM4M2JmNGZjNDg5XkEyXkFqcGc@._V1_.jpg",
