--- a/home.html
+++ b/home.html
@@ -165,10 +165,10 @@ body{
 </div>
 
 <div class="top-actions">
-  <a href="packages.html" class="btn subscribe">Subscribe</a>
+  <a href="packages.html" class="btn subscribe">Pay to Watch</a>
   <a href="login.html" class="btn login">Login</a>
-  <a href="live.html" class="btn live">Live TV</a>
-  <a href="about.html" class="btn about">About</a>
+  <a href="live.html" class="btn live">Live</a>
+  <a href="about.html" class="btn about">About Us</a>
   <a href="agents.html" class="btn agents">Our Agents</a>
   <a href="library-login.html" class="btn library">Library</a>
   <a href="kibanda-login.html" class="btn kibanda">Kibanda</a>
