--- a/checkout.html
+++ b/checkout.html
@@ -82,7 +82,7 @@ header h1 {
 
 <header>
     <h1>Checkout</h1>
-    <p>Complete your package subscription</p>
+    <p>Send on 0703888884 in names of David Bakamize</p>
 </header>
 
 <div class="checkout-card" id="checkoutCard">
@@ -118,13 +118,13 @@ const packages = {
         name: "Kabeja",
         price: "UGX 13,000",
         duration: "30 days",
-        advantages: ["Access to all movies for 30 days", "Access to series", "Ad-free experience"]
+        advantages: ["Access to all movies for 30 days", "Access to series", "No disturbing Ads"]
     },
     halfyear: {
         name: "Kabeje",
         price: "UGX 70,000",
         duration: "6 months",
-        advantages: ["Full access for 6 months", "HD Quality", "Ad-free", "Premium series & movies"]
+        advantages: ["Full access for 6 months", "HD Quality", "Ad-free enjoyment", "Premium series & Movies"]
     },
     annual: {
         name: "Kabejest",
@@ -136,7 +136,7 @@ const packages = {
         name: "Kibanda / Library",
         price: "UGX 20,000",
         duration: "30 days",
-        advantages: ["Special access to movies and series", "Option to download", "Full HD quality"]
+        advantages: ["Option to download","Special access to movies and series", "Digital HQ Sound", "Full HD quality"]
     }
 };
 
@@ -170,3 +170,4 @@ document.getElementById("payBtn").onclick = () => {
 
 </body>
 </html>
+
