--- a/kibanda.html
+++ b/kibanda.html
@@ -232,6 +232,7 @@
 { title: "Episode 6", url: "https://drive.google.com/file/d/1prnCWLTeyiPYra9STaEqXd_7iJzI3DVe/preview" },
  { title: "Episode 7", url: "https://drive.google.com/file/d/1943ULAKpaLG8JqP2-hQQnp0GMGBZnJJt/view" },
 { title: "Episode 8", url: "https://drive.google.com/file/d/1YCB4mMrljIoyXKSFG3WvlW8sB_0pxQTP/view" },
+ { title: "Episode 9", url: "https://drive.google.com/file/d/1tE8hoOmCDemqN7Cx9BrIzMs4aE8yvYWp/view" },
 
 ]
           },
