--- a/kibanda.html
+++ b/kibanda.html
@@ -235,7 +235,7 @@
  { title: "Episode 9", url: "https://drive.google.com/file/d/1tE8hoOmCDemqN7Cx9BrIzMs4aE8yvYWp/view" },
 { title: "Episode 10", url: "https://drive.google.com/file/d/12JqpeOkbYLdbyL-geDFXDZvvzz-yGhVm/view" },
 { title: "Episode 11", url: "https://drive.google.com/file/d/1ZoTncWtTo7KnpHr2r1ef-VIg9eId-url/view" },
-
+{ title: "Episode 12", url: "https://drive.google.com/file/d/1nPiK5VYTWLfkP5f32WyUwlIFTCCKxn0q/view" },
 ]
           },
      {
