--- a/kibanda.html
+++ b/kibanda.html
@@ -236,6 +236,10 @@
 { title: "Episode 10", url: "https://drive.google.com/file/d/12JqpeOkbYLdbyL-geDFXDZvvzz-yGhVm/view" },
 { title: "Episode 11", url: "https://drive.google.com/file/d/1ZoTncWtTo7KnpHr2r1ef-VIg9eId-url/view" },
 { title: "Episode 12", url: "https://drive.google.com/file/d/1nPiK5VYTWLfkP5f32WyUwlIFTCCKxn0q/view" },
+{ title: "Episode 13", url: "https://drive.google.com/file/d/1qXC94Zf8dX2FwxjTpsvDLOe2vfkNkgVW/view" },
+{ title: "Episode 14", url: "https://drive.google.com/file/d/13tXu8Z7Eg8dkKn0q8NXvFuZwGYzZU9xj/view" },
+{ title: "Episode 15", url: "https://drive.google.com/file/d/196wbn0LGK47vuEVyM_hOzzWV3vc-hsIQ/view" },
+{ title: "Episode 16", url: "https://drive.google.com/file/d/1AdUvtPVlciFMSjhxEpXY8n_afVfn3Ib8/view" },
 ]
           },
      {
